fixed proportional spacing

--- a/src/app/components/foods/foods.scss
+++ b/src/app/components/foods/foods.scss
@@ -1,15 +1,21 @@
 // src/app/components/foods/foods.scss
 
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
 .foods-container {
   display: flex;
   flex-direction: column;
   height: 100%;
-  min-height: 100%;  // Force full height
-  max-height: 100%;  // Don't expand beyond parent
+  width: 100%;
   background-color: #3a3a3a;
-  gap: 2px;  // Reduced from 8px
+  gap: 2px;
   padding: 0;
-  overflow: hidden;  // Prevent expansion
+  overflow: hidden;
 }
 
 .search-controls {
@@ -122,6 +128,7 @@
   overflow: hidden;  // Hide overflow on container
   display: flex;
   flex-direction: column;
+  border: 2px solid #ff00ff;  // TEMPORARY: Magenta border to see the container
 }
 
 .loading-message,
